--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,8 @@ file(GLOB_RECURSE FILES_ROCKETSIM "src/*.cpp" "src/*.h")
 # Only include bullet headers when using MSVC, otherwise just code files
 file(GLOB_RECURSE FILES_BULLET "libsrc/bullet3-3.24/*.cpp" "libsrc/bullet3-3.24/*.h")
 
-add_library(RocketSim ${FILES_ROCKETSIM} ${FILES_BULLET})
+add_library(RocketSim SHARED ${FILES_ROCKETSIM} ${FILES_BULLET})
 
 set_target_properties(RocketSim PROPERTIES LINKER_LANGUAGE CXX)
 set_target_properties(RocketSim PROPERTIES CXX_STANDARD 20)
+set_target_properties(RocketSim PROPERTIES CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
